---------------------------------------------------------------------------------------------------
Version: 0.0.124
Date: 10/04/2020
  Changes:
    - made collision boxes for Fluid Interactor and Wireless Data Receiver smaller (they couldn't be placed next to each-other)
---------------------------------------------------------------------------------------------------
Version: 0.0.123
Date: 10/04/2020
  Bugfixes:
    - patch for fluid interactor bug introduced in previous patch
---------------------------------------------------------------------------------------------------
Version: 0.0.122
Date: 10/04/2020
  Features:
    - add temperature to Deep Tank interactions (gui addition eventually)
  Bugfixes:
    - player would get teleported back to previous surface if it was from a vehicle interaction teleport (Chronotrain)
    - script_raised_revive would break MF recording functions
---------------------------------------------------------------------------------------------------
Version: 0.0.121
Date: 02/04/2020
  Changes:
    - create flying text if sync area is obstructed
  Bugfixes:
    - fix sync bug when mining an entity
---------------------------------------------------------------------------------------------------
Version: 0.0.120
Date: 01/04/2020
  Features:
    - Added setting for how the player obtains their (first) Mobile Factory
    - Added setting for which "science packs" a Dimensional Lab can use
  Bugfixes:
    - Don't open custom GUI if player is connecting wires
  Changes:
    - Honktown (right now) is developing Mobile Factory for the foreseeable future, as Mugiwaxar (aka Dexy) had something more urgent to do
    - Mobile Factory GT now requires a car
    - Hovering Factory a bit more costly and requires Mobile Factory
    - Machine Frame 2's now require 2x Machine Frame 1 (plates reduced, slightly less overall cost). Update your logistics!
    - take all items when mining a sync'd chest on either side