@@ -703,7 +703,7 @@ ConstructionJetDistanceOptTT=The Maximum Distance between the Construction Jet a
 RepairJetDistanceOpt=Repair Jet
 RepairJetDistanceOptTT=The Maximum Distance between the Repair Jet and the Mobile Factory (Default: 200)
 CombatJetDistanceOpt=Combat Jet
-CombatJetDistanceOptTT=The Maximum Distance between the Combat Jet and the Mobile Factory (Default: 200)
+CombatJetDistanceOptTT=The Launch Distance between the Combat Jet and a threat near the Mobile Factory (Default: 200)
 FloorIsLavaTitle=Floor Is Lava
 FloorIsLavaOpt=Active Floor Is Lava
 FloorIsLavaOptTT=The radioactivity is very strong, and the floor will damage you. Only the Dimensional Tile can save you from imminent death. (Admin only)
