@@ -2,8 +2,10 @@
 [mod-setting-name]
 MF-first-MF=First Mobile Factory
 MF-lab-science-packs=Dim. Lab Science Packs
+MF-enable-erya=Enable Erya
 
 ## ---- DESCRIPTIONS ---- ##
 [mod-setting-description]
 MF-first-MF=on player creation or only from being crafted (by anyone)
 MF-lab-science-packs=Science packs usable by Dimensional Lab.\nAny, add normal lab science packs,\nor only Dimensional science material
+MF-enable-erya=enable or disable Erya technology
