@@ -75,7 +75,10 @@ dlP.off_animation =
         }
       }
     }
-dlP.inputs = {"DimensionalSample", "DimensionalCrystal", "EryaSample"}
+dlP.inputs = {"DimensionalSample", "DimensionalCrystal"}
+if settings.startup["MF-enable-erya"].value == true then
+table.insert(dlP.inputs, "EryaSample")
+end
 data:extend{dlP}
 
 -- Item --
